--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,7 +59,7 @@ jobs:
         run: echo "Build completed successfully. Deployment skipped - configure server secrets to enable deployment."
 
       - name: Deploy to server (DISABLED)
-        if: true # Disabled until server secrets are configured
+        if: true
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.HOST }}
@@ -87,7 +87,7 @@ jobs:
             mkdir -p $DEPLOY_PATH/current
 
       - name: Copy files to server
-        if: false # Disabled until server secrets are configured
+        if: true
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.HOST }}
@@ -99,7 +99,7 @@ jobs:
           strip_components: 1
 
       - name: Start application with PM2
-        if: false # Disabled until server secrets are configured
+        if: true
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.HOST }}
